# esoul-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  publish.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: esoul-llm-reference.md
examples/: add_1000_uuids.py  add_spreadsheet_rows.py  lion_question_test.py  live_demo_10_mutations.py
src/esoul/: __init__.py  _async_client.py  _auth.py  _client.py  _transport.py  _version.py  exceptions.py
src/esoul/resources/: __init__.py  agents.py  dispatch.py  drive.py  questions.py  workspaces.py
tests/: conftest.py  test_integration_describe.py  test_integration_dispatch.py  test_integration_state.py  test_integration_workspaces.py
