[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "esoul"
dynamic = ["version"]
description = "Python SDK for the ExternalSoul platform — programmatic workspace mutation, event-sourced, audit-logged."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "ExternalSoul", email = "hey@vyomkeshj.com" },
]
keywords = ["externalsoul", "esoul", "kinetic", "workspace", "automation", "event-sourcing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # httpx 0.27 added Timeout + connection-pool improvements we rely on;
    # earlier versions work but we don't test against them.
    "httpx>=0.27,<1.0",
    # pydantic v2 for typed response models. v1 had a different validation
    # API; the codegen pipeline targets v2 exclusively.
    "pydantic>=2.0,<3.0",
    # typing_extensions for TypeAlias / Self on Python 3.9-3.10.
    "typing_extensions>=4.7; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/vyomkeshj/esoul-python"
Documentation = "https://externalsoul.com/sdk-docs/llm-reference.md"
Repository = "https://github.com/vyomkeshj/esoul-python"
Changelog = "https://github.com/vyomkeshj/esoul-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",  # httpx mocking
    "build>=1.0",
    "twine>=5.0",
]

[tool.hatch.version]
path = "src/esoul/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/esoul"]

[tool.hatch.build.targets.sdist]
include = [
    "src/esoul",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ─── mypy ────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
# The generated resources/types modules will land here after codegen.
# Their typing is stricter than mypy's defaults expect.
files = ["src/esoul"]

[[tool.mypy.overrides]]
module = "esoul.resources.*"
# Codegen-emitted modules carry a `# mypy: file generated` marker; we keep
# strict mode but allow ignore-comments to pile up around generated bits.
strict = true

# ─── ruff ────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (modernise type hints etc.)
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length — formatter handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

# ─── pytest ──────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
